--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ eclipse_ws/biobank2/bin
 eclipse_ws/biobank2/conf
 eclipse_ws/biobank2/lib/*.jar
 eclipse_ws/biobank2/log
+eclipse_ws/biobank2/about.mappings
 eclipse_ws/biobank2/scanlib.*
 eclipse_ws/biobank2/src/edu/ualberta/med/biobank/test
 eclipse_ws/biobank2.ws-client/bin
