--- a/product/build.properties
+++ b/product/build.properties
@@ -24,7 +24,8 @@ topLevelElementType = feature
 #topLevelElementId = org.foo.bar
 
 ############# PRODUCT/PACKAGING CONTROL #############
-product=/home/delphine/projects/biobank2/eclipse_ws/biobank2/biobank2.product
+# aicml: the ant task is defining this value in a parameter:
+#product=/home/delphine/projects/biobank2/eclipse_ws/biobank2/biobank2.product
 
 runPackager=true
 
@@ -36,7 +37,7 @@ p2.flavor=tooling
 p2.publish.artifacts=true
 
 #Set the name of the archive that will result from the product build.
-archiveNamePrefix=BioBank2-v1.4.0
+archiveNamePrefix=BioBank2-${java.client.version.num}
 
 # The prefix that will be used in the generated archive.
 archivePrefix=BioBank2
@@ -48,10 +49,10 @@ collectingFolder=${archivePrefix}
 # value is a '&' separated list of ',' separate triples.  For example, 
 #     configs=win32,win32,x86 & linux,motif,x86
 # By default the value is *,*,*
-configs = linux, gtk, x86_64
-#win32, win32, x86 & \
-#win32,win32,x86_64 & \
-#linux, gtk, x86
+configs = linux, gtk, x86_64 & \
+win32, win32, x86 & \
+win32,win32,x86_64 & \
+linux, gtk, x86
 #configs=win32, win32, x86 & \
 #	win32,win32,x86_64 & \
 #	win32,win32,wpf & \
@@ -131,7 +132,8 @@ tarargs=
 ############## BUILD NAMING CONTROL ################
 # The directory into which the build elements are fetched and where
 # the build takes place.
-buildDirectory=/home/delphine/projects/biobank2/product/buildDirectory
+# aicml: the ant task is defining this value in a parameter
+#buildDirectory=/home/delphine/projects/biobank2/product/buildDirectory
 #${user.home}/eclipse.build
 
 # Type of build.  Used in naming the build output.  Typically this value is
@@ -162,8 +164,9 @@ timestamp=007
 # in most RCP app or a plug-in,  the baseLocation should be the location of a previously
 # installed Eclipse against which the application or plug-in code will be compiled and the RCP delta pack.
 
-base=/home/delphine/apps
-baseLocation=${base}/eclipseWithDeltaPack
+# aicml: these values are defined by the ant task parameters
+#base=/home/delphine/apps
+#baseLocation=${base}/eclipseWithDeltaPack
 
 #Folder containing repositories whose content is needed to compile against
 #repoBaseLocation=${base}/repos
