--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
   </exec>
 
   <property name="server.version.num" value="1.3.1"/>
-  <property name="java.client.version.num" value="1.3.4.pre"/>
+  <property name="java.client.version.num" value="1.3.4"/>
 
   <property environment="env" />
   <property name="host" value="aicml-med.cs.ualberta.ca" />
