--- a/product/build.properties
+++ b/product/build.properties
@@ -30,11 +30,11 @@ topLevelElementType = feature
 runPackager=true
 
 p2.gathering=true
-generate.p2.metadata = true
-p2.metadata.repo=file:${buildDirectory}/repo
-p2.artifact.repo=file:${buildDirectory}/repo
-p2.flavor=tooling
-p2.publish.artifacts=true
+#generate.p2.metadata = true
+#p2.metadata.repo=file:${buildDirectory}/repo
+#p2.artifact.repo=file:${buildDirectory}/repo
+#p2.flavor=tooling
+#p2.publish.artifacts=true
 
 #Set the name of the archive that will result from the product build.
 archiveNamePrefix=BioBank2-${java.client.version.num}
@@ -49,10 +49,11 @@ collectingFolder=${archivePrefix}
 # value is a '&' separated list of ',' separate triples.  For example, 
 #     configs=win32,win32,x86 & linux,motif,x86
 # By default the value is *,*,*
-configs = linux, gtk, x86_64 & \
-win32, win32, x86 & \
-win32,win32,x86_64 & \
-linux, gtk, x86
+configs = linux, gtk, x86_64 
+#& \
+#win32, win32, x86 & \
+#win32,win32,x86_64 & \
+#linux, gtk, x86
 #configs=win32, win32, x86 & \
 #	win32,win32,x86_64 & \
 #	win32,win32,wpf & \
