--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ eclipse_ws/biobank2/about.mappings
 eclipse_ws/biobank2/src/edu/ualberta/med/biobank/test
 eclipse_ws/biobank2.ws-client/bin
 eclipse_ws/biobank2.ws-client/lib/*.jar
+eclipse_ws/biobank2/dmscanlib.txt
 log/
 model/*.png
 model/biobank2.uml~
