--- a/product/build.properties
+++ b/product/build.properties
@@ -49,11 +49,10 @@ collectingFolder=${archivePrefix}
 # value is a '&' separated list of ',' separate triples.  For example, 
 #     configs=win32,win32,x86 & linux,motif,x86
 # By default the value is *,*,*
-configs = linux, gtk, x86_64 
-#& \
-#win32, win32, x86 & \
-#win32,win32,x86_64 & \
-#linux, gtk, x86
+configs = linux, gtk, x86_64 & \
+win32, win32, x86 & \
+win32,win32,x86_64 & \
+linux, gtk, x86
 #configs=win32, win32, x86 & \
 #	win32,win32,x86_64 & \
 #	win32,win32,wpf & \
