--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -1268,7 +1268,7 @@
                   icon="icons/search.png"
                   label="Search"
                   style="push"
-                  tooltip="Search">
+                  tooltip="Search Panel">
             </command>
             <command
                   commandId="edu.ualberta.med.biobank.commands.logging"
@@ -1377,7 +1377,7 @@
                   icon="icons/search.png"
                   label="Search"
                   style="push"
-                  tooltip="Search">
+                  tooltip="Search Panel">
             </command>
             <command
                   commandId="edu.ualberta.med.biobank.commands.reloadViewWithTree"
