--- a/eclipse_ws/biobank2/plugin_customization.ini
+++ b/eclipse_ws/biobank2/plugin_customization.ini
@@ -39,3 +39,6 @@ org.eclipse.equinox.p2.ui.sdk.scheduler/remindElapsedTime=4 Hours
 
 # download updates before notifying the user
 org.eclipse.equinox.p2.ui.sdk.scheduler/download=true
+
+# show the barcode field in scanner plate preferences
+scannerConfig/scanner.plate.show.barcode.pref=true
