modifed build to set up libs for cancelquery

--- a/build.xml
+++ b/build.xml
@@ -183,7 +183,9 @@
     <copy file="sdk_conf/application-config-client.xml" tofile="${cacore.sdk.dir}/conf/system/package/local-client/conf/application-config-client.xml" />
     <copy file="sdk_conf/application-config-client-info.xml" tofile="${cacore.sdk.dir}/conf/system/package/remote-client/conf/application-config-client-info.xml" />
     <copy file="sdk_conf/application-config-security.xml" tofile="${cacore.sdk.dir}/conf/system/web/WEB-INF/classes/application-config-security.xml" />
-    <ant dir="${cacore.sdk.dir}" target="build-system" inheritRefs="false" />
+    <copy file="${req.jars.dir}/mysql-connector-java-5.1.7-bin.jar" tofile="${cacore.sdk.dir}/system/lib/mysql-connector-java-5.1.7-bin.jar" />
+	<delete file="${cacore.sdk.dir}/system/lib/mysql-connector-java-3.1.13-bin.jar"/>
+	<ant dir="${cacore.sdk.dir}" target="build-system" inheritRefs="false" />
   </target>
   <target name="log4j-conf">
     <copy file="security-logs/log4j.xml"
@@ -280,6 +282,7 @@
       <fileset dir="${cacore.sdk.dir}/output/biobank2/package/ws-client/lib" />
       <filelist dir="${cacore.sdk.dir}/system/lib" files="${cacore.system.jar.files}" />
       <filelist dir="${req.jars.dir}" files="${biobank.common.jar.files}" />
+	  <fileset file="${req.jars.dir}/mysql-connector-java-5.1.7-bin.jar" />
       <fileset file="${cacore.sdk.dir}/system/security/dist/sdk-security.jar" />
       <fileset file="${cacore.sdk.dir}/writable-api/dist/sdk-writable-client-framework.jar"/>
     </copy>
