--- a/eclipse_ws/biobank.common/build.properties
+++ b/eclipse_ws/biobank.common/build.properties
@@ -2,7 +2,8 @@ bin.includes = META-INF/,\
                lib/,\
                bin/,\
                conf/,\
-               .
+               .,\
+               lib/client/mysql-connector-java-5.1.7-bin.jar
 source.. = src/,\
            conf/
 jars.compile.order = .
