--- a/build.xml
+++ b/build.xml
@@ -186,11 +186,18 @@
     <ant dir="${cacore.sdk.dir}" target="build-system" inheritRefs="false" />
   </target>
   <target name="log4j-conf">
-    <copy file="security-logs/log4j.xml"
-          tofile="${cacore.sdk.dir}/conf/system/web/WEB-INF/classes/log4j.xml" overwrite="true"/>
-    <replace file="${cacore.sdk.dir}/conf/system/web/WEB-INF/classes/log4j.xml" token="@LOG4J_LEVEL@" value="${LOG4J_LEVEL}"/>
-    <copy file="${cacore.sdk.dir}/conf/system/web/WEB-INF/classes/log4j.xml"
-	  tofile="${cacore.sdk.dir}/${build.conf.system.web.dir}/WEB-INF/classes/log4j.xml" overwrite="true"/>
+  	<copy file="security-logs/log4j.xml"
+  		  tofile="${cacore.sdk.dir}/output/biobank2/conf/system/web/WEB-INF/classes/log4j.xml" overwrite="true"/> 
+    <replace file="${cacore.sdk.dir}/output/biobank2/conf/system/web/WEB-INF/classes/log4j.xml">    	
+    	<replacefilter token="@LOG4J_LEVEL@" value="${LOG4J_LEVEL}"/>
+    	<!-- these one are copied from the caCore ant build file. -->
+    	<replacefilter token="@CLM_DB_DRIVER@" value="${CLM_DB_DRIVER}" />	
+    	<replacefilter token="@CLM_DB_CONNECTION_URL@" value="${CLM_DB_CONNECTION_URL}" />	
+    	<replacefilter token="@CLM_DB_USERNAME@" value="${CLM_DB_USERNAME}" />	
+    	<replacefilter token="@CLM_DB_PASSWORD@" value="${CLM_DB_PASSWORD}" />	
+    	<replacefilter token="@CLM_PROJECT_NAME@" value="${CLM_PROJECT_NAME}" />
+    </replace>
+    	
   </target>
   <target name="sdk-files" depends="sdk">
     <fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib"
