--- a/build.xml
+++ b/build.xml
@@ -306,6 +306,9 @@
     <copy todir="${eclipse.workspace.dir}/biobank2.ws-client/lib">
       <filelist dir="${cacore.sdk.dir}/output/biobank2/package/ws-client/lib" files="biobank2-beans.jar"/>
     </copy>
+    <copy todir="${eclipse.proj.dir.tools}/lib">
+      <fileset file="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib/log4j-1.2.14.jar"/>
+    </copy>
   </target>
   <!-- JBoss -->
   <target name="check-jboss-uptodate">
@@ -716,27 +719,27 @@
     <echo message="coverage report: file://${converage.output}/index.html" />
   </target>
 
-	
+
   <target name="eclipse.home.env">
 	<fail unless="env.ECLIPSE_HOME" message="ECLIPSE_HOME environment variable not defined. It should define a path to an eclipse installation containing the Delta Pack." />
   </target>
-		
-	
+
+
   <target name="product" depends="eclipse.home.env">
-  	<property name="buildDirectory" value="${product.dir}/buildDirectory"/> 
-	<delete dir="${buildDirectory}"/>			
+  	<property name="buildDirectory" value="${product.dir}/buildDirectory"/>
+	<delete dir="${buildDirectory}"/>
 	<copy todir="${buildDirectory}/plugins/biobank2">
 		<fileset dir="${eclipse.workspace.dir}/biobank2"/>
-	</copy>			  	
+	</copy>
 	<copy todir="${buildDirectory}/plugins/scannerConfig">
 		<fileset dir="${eclipse.workspace.dir}/scannerConfig"/>
-	</copy>			  	
+	</copy>
 	<copy todir="${buildDirectory}/plugins/biobank.common">
 		<fileset dir="${eclipse.workspace.dir}/biobank.common"/>
 	</copy>
 	<copy todir="${buildDirectory}/plugins/sampleProcessingRobot">
 		<fileset dir="${eclipse.workspace.dir}/sampleProcessingRobot"/>
-	</copy>  
+	</copy>
 	<copy todir="${buildDirectory}/features/biobank2.feature.core">
 		<fileset dir="${eclipse.workspace.dir}/biobank2.feature.core"/>
 	</copy>
@@ -750,7 +753,7 @@
   	<fileset id="pde.build.id.all" dir="${env.ECLIPSE_HOME}/plugins/" includes="org.eclipse.pde.build_*/scripts/productBuild/productBuild.xml"/>
   	<last id="pde.build.id" count="1"><fileset refid="pde.build.id.all" /></last>
   	<!-- launch product creation -->
-    <java classpath="${toString:launcher.id}" 
+    <java classpath="${toString:launcher.id}"
     	classname="org.eclipse.equinox.launcher.Main" failonerror="true" fork="true">
       <arg line="-application org.eclipse.ant.core.antRunner"/>
       <arg line="-buildfile ${toString:pde.build.id}"/>
@@ -765,9 +768,9 @@
     </java>
   	<antcall target="updateSiteMetadata" />
   	</target>
-	
+
   	<target name="updateSiteMetadata" depends="eclipse.home.env">
-  	  <property name="buildDirectory" value="${product.dir}/buildDirectory"/> 
+  	  <property name="buildDirectory" value="${product.dir}/buildDirectory"/>
   	  <property name="updateSiteFolder" value="${buildDirectory}/updateSite"/>
       <copy todir="${updateSiteFolder}/features/">
   	    <fileset dir="${buildDirectory}/buildRepo/features/"/>
@@ -782,17 +785,17 @@
   	  	  <pathelement location="${product.dir}/ant-contrib/ant-contrib-1.0b3.jar"/>
   	  	</classpath>
   	  </taskdef>
-  	  <propertyregex property="featureVersion" input="${featureJar}" 
+  	  <propertyregex property="featureVersion" input="${featureJar}"
   	    regexp="biobank2.feature.core_(.*)\.jar"
   	  	select="\1" casesensitive="true" />
   	  <copy file="${product.dir}/site.xml" tofile="${updateSiteFolder}/site.xml" />
   	  <replace file="${updateSiteFolder}/site.xml" token="@VERSION@" value="${featureVersion}"/>
-  		
-  		
+
+
   	  <!-- get current org.eclipse.equinox.launcher jar. If find more than one, will use the last one in the list (should be the last version)-->
   	  <fileset id="launcher.id.all" dir="${env.ECLIPSE_HOME}/plugins/" includes="org.eclipse.equinox.launcher_*.jar" />
   	  <last id="launcher.id" count="1"><fileset refid="launcher.id.all" /></last>
-	  <java classpath="${toString:launcher.id}" 
+	  <java classpath="${toString:launcher.id}"
 	    	classname="org.eclipse.equinox.launcher.Main" failonerror="true" fork="true">
 	 	<arg line="-application org.eclipse.equinox.p2.publisher.UpdateSitePublisher"/>
 	 	<arg line="-source ${updateSiteFolder}"/>
@@ -803,6 +806,6 @@
 	 	<arg line="-metadataRepository file:${updateSiteFolder}"/>
 	 </java>
   </target>
-	 
+
 
 </project>
