--- a/eclipse_ws/biobank2.tools/conf/log4j.properties
+++ b/eclipse_ws/biobank2.tools/conf/log4j.properties
@@ -1,6 +1,6 @@
 log4j.rootLogger=warn, R, stdout
 log4j.category.edu.ualberta.med.biobank=info
-log4j.category.edu.ualberta.med.biobank.tools.modelumlparser=info
+log4j.category.edu.ualberta.med.biobank.tools.modelumlparser=debug
 
 #log4j.category.edu.ualberta.med.biobank.widgets.MultiSelect=TRACE,stdout
 
